src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_pr_review.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Review PR: Add new login flow
  Description: https://github.com/example/repo/pull/99

This is a PR review task. Do NOT write a plan, implement code changes, or call /wrap-up — you are here to review the PR, not to implement anything.

1. Find the PR number or URL from the task description.
2. Check the diff size: `gh pr diff <PR-number> --repo <owner/repo> | wc -l`
3. Choose the review command based on diff size:
   - Small PR (< ~300 lines changed): run `/review`
   - Large PR (≥ ~300 lines changed): run `/review-pr`

After running the review, present your findings and wait for the user's instructions. Do NOT call /wrap-up.

Knowledge base: when anything is unclear, call `query_learnings` to check the knowledge base before guessing or asking. When you act on a surfaced learning, call `rate_learning` (`helped` or `wrong`); use `/learnings` to record useful findings. Use `delete_learning` to remove stale or incorrect entries by ID.
