src/dispatch/snapshots/dispatch_tui__dispatch__prompts_snapshots__snapshot_dispatch_prompt_with_plan_auto_run.snap
---
source: src/dispatch/prompts_snapshots.rs
expression: prompt
---
Your task is:
Task:
  ID: 42
  Title: Fix the authentication bug
  Description: Users cannot log in after the password hash migration

Plan: /home/user/repo/docs/plans/fix-auth.md
Read this file for the full implementation plan and begin implementing it right away — the plan has already been reviewed and confirmed, so no summary or confirmation step is needed.

Always use TDD: express intended behaviour as tests first, then implement the minimum code to make them pass.

The Allium specs in `docs/specs/` are the source of truth for domain logic. Consult them before changing core behaviour. If your implementation changes domain behaviour, update the spec using the `allium:tend` skill and verify alignment with `allium:weed`.

Knowledge base: when anything is unclear, call `query_learnings` to check the knowledge base before guessing or asking. When you act on a surfaced learning, call `rate_learning` (`helped` or `wrong`); use `/learnings` to record useful findings. Use `delete_learning` to remove stale or incorrect entries by ID.

Writing a spec or attaching a plan for your own task is not a stopping point on its own — implement it in the same session first. When your work is done — finishing implementation, or (for an epic-decomposition task) creating work packages for its subtasks — use the /wrap-up skill to commit any remaining changes and finalise the task.
